--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "16.5.2",
     "react-google-login": "^4.0.1",
     "react-google-maps": "9.4.5",
+    "react-particles-js": "^2.4.2",
     "react-redux": "^6.0.0",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.5",
